--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,7 @@
+NODE_ENV= #Environment options: development | production | test
+DATA_PROVIDER=mock #Provider options: firebase | mongo | sql | mock
+
+# Firebase config props
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
@@ -6,4 +10,10 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_MEASUREMENT_ID=
 
-NEXT_PUBLIC_API_URL=
+# MongoDB config props
+MONGODB_URI=
+MONGODB_DB=
+
+# SQL (prisma) database URL
+DATABASE_URL=
+DATABASE_PROVIDER= #Provider options: postgresql | mysql | sqlite
