--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NODE_ENV= #Environment options: development | production | test
 DATA_PROVIDER=mock #Provider options: firebase | mongo | sql | mock
+LANG_LOCALES= #Languages options
+LANG_DEFAULTLOCALES= #default fallback language
 
 # Firebase config props
 NEXT_PUBLIC_FIREBASE_API_KEY=
