--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.7.1",
     "mongodb": "^6.16.0",
     "next": "15.3.2",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
