--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NODE_ENV= #Environment options: development | production | test
 DATA_PROVIDER=mock #Provider options: firebase | mongo | sql | mock
+
+#Languages config
 LANG_LOCALES= #Languages options
 LANG_DEFAULTLOCALES= #default fallback language
 
