--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
