--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "firebase": "^11.7.1",
+    "lucide-react": "^0.513.0",
     "mongodb": "^6.16.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
