Parcial completion of shopping cart section

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV= #Environment options: development | production | test
 DATA_PROVIDER=mock #Provider options: firebase | mongo | sql | mock
+NEXT_PUBLIC_BASE_URL=
 
 #Languages config
 LANG_LOCALES= #Languages options
