Web catalog complete

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,13 @@ NODE_ENV= #Environment options: development | production | test
 DATA_PROVIDER=mock #Provider options: firebase | mongo | sql | mock
 NEXT_PUBLIC_BASE_URL=
 
+#Shoppping cart config
+CART_ENABLED=
+CART_EXPIRATION_DAYS=
+CART_COOKIE_NAME=
+CART_CURRENCY=
+EXCHANGE_CURRENCY=
+
 #Languages config
 LANG_LOCALES= #Languages options
 LANG_DEFAULTLOCALES= #default fallback language
