Login and logout complete

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_MEASUREMENT_ID=
+GOOGLE_APPLICATION_CREDENTIALS=./firebase_service.json
 
 # MongoDB config props
 MONGODB_URI=
@@ -29,3 +30,6 @@ MONGODB_DB=
 # SQL (prisma) database URL
 DATABASE_URL=
 DATABASE_PROVIDER= #Provider options: postgresql | mysql | sqlite
+
+# Auth config props
+AUTH_JWT_SECRET=
