--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "firebase": "^11.7.1",
+    "firebase-admin": "^13.5.0",
+    "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.513.0",
     "mongodb": "^6.16.0",
     "next": "15.3.2",
