New products form complete

--- a/.env.example
+++ b/.env.example
@@ -3,25 +3,29 @@ DATA_PROVIDER=mock #Provider options: firebase | mongo | sql | mock
 NEXT_PUBLIC_BASE_URL=
 
 #Shoppping cart config
-CART_ENABLED=
-CART_EXPIRATION_DAYS=
-CART_COOKIE_NAME=
-CART_CURRENCY=
-EXCHANGE_CURRENCY=
+NEXT_PUBLIC_CART_ENABLED=true
+NEXT_PUBLIC_CART_EXPIRATION_DAYS=7
+NEXT_PUBLIC_CART_SESSION_NAME=
+NEXT_PUBLIC_CART_MAIN_CURRENCY=\$
+NEXT_PUBLIC_EXCHANGE_CURRENCY=Bs
+NEXT_PUBLIC_EXCHANGE_ENABLED=true
+NEXT_PUBLIC_EXCHANGE_RATE_TYPE=api #Valid options: fixed | api
 
 #Languages config
 LANG_LOCALES= #Languages options
 LANG_DEFAULTLOCALES= #default fallback language
 
 # Firebase config props
-NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
-NEXT_PUBLIC_MEASUREMENT_ID=
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
+MEASUREMENT_ID=
 GOOGLE_APPLICATION_CREDENTIALS=./firebase_service.json
+
+FIREBASE_SERVICE_ACCOUNT_KEY=
 
 # MongoDB config props
 MONGODB_URI=
