--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.513.0",
     "mongodb": "^6.16.0",
-    "next": "15.3.2",
+    "next": "^15.3.6",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
